修复forkme图片路径，修改目录为docx，改写getfile()支持中文路径

--- a/docs/config.json
+++ b/docs/config.json
@@ -3,14 +3,14 @@
 	"tagline": "最简单的方式构建你的项目文档",
 	"docs_path": "docs",
 	"image": "img/app.png",
-	"theme": "blue",
+	"theme": "navy",
 	"template": "default",
 	"timezone": "Asia/Shanghai",
 	"toggle_code": true,
 	"date_modified": true,
 	"repo": "azhai/docx",
 	"google_analytics": "",
-	"clean_urls": false,
+	"clean_urls": true,
 	"links": {
 		"GitHub仓库": "https://github.com/azhai/docx",
 		"Todaymade出品": "http://todaymade.com",
