文档标题作为菜单标题，设置模板layout

--- a/docs/config.json
+++ b/docs/config.json
@@ -4,10 +4,12 @@
 	"reading": "开始阅读文档",
 	"author": "",
 	"docs_path": "docs",
+	"static_path": "static",
 	"file_desc": false,
 	"image": "img/app.png",
 	"theme": "navy",
 	"template": "default",
+	"layout": "post",
 	"file_editor": true,
 	"toggle_code": true,
 	"float": false,
