--- a/blog/.htaccess
+++ b/blog/.htaccess
@@ -1,6 +1,5 @@
-RewriteEngine On
-#RewriteBase /
-
+RewriteEngine on
+RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule .* index.php [L,QSA]
+RewriteRule ^(.*)$ index.php?q=$1 [L,QSA]
