--- a/blog/.htaccess
+++ b/blog/.htaccess
@@ -2,4 +2,5 @@ RewriteEngine on
 RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_URI}      !\.php
 RewriteRule ^(.*)$ index.php?q=$1 [L,QSA]
